objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Brazos_acct_deleted__c</fullName>
        <description>This is date/time the Brazos Account was deleted.  Should not be modified by a SFDC user.</description>
        <inlineHelpText>This is date/time the Brazos Account was deleted.  Should not be modified by a SFDC user.</inlineHelpText>
        <label>Brazos_acct_deleted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Brazos_id__c</fullName>
        <description>Allows Web visitors to change email address, while still maintaining the same Lead/Contact record.</description>
        <label>Brazos_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brazos_source_svr__c</fullName>
        <description>Indicates the server instance of the record - used to indicate Dev/Test/Prod.</description>
        <label>Brazos_source_svr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Schedule Recipient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPA Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Coordinator Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer/Cheerleader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFS User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Success Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Financial Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <label>Doing Business As</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garden_Address__c</fullName>
        <formula>Account.Garden_Address__c</formula>
        <label>Garden Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <label>Job Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login_Day__c</fullName>
        <label>Last Login Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Project_One_Pager_Link__c</fullName>
        <description>A temporary field to automate the sending of the project one pager link out to a contact on an account</description>
        <label>Latest Project One Pager Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Project_One_Pager_Owner__c</fullName>
        <label>Latest Project One Pager Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Dawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest_proposal_created2__c</fullName>
        <label>Latest proposal created2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <description>Identifies the Type for the lead.  Note that a lead&apos;s type can change if he engages Noesis for a different reason.</description>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Manager / Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Noesis_Account_Email__c</fullName>
        <description>This is the users email address to login to Noesis.</description>
        <label>Noesis Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Number_of_Facilities__c</fullName>
        <label>Number of Facilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origination_Owner__c</fullName>
        <formula>TEXT(Account.Origination_Owner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origination Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originations_Owner_Email__c</fullName>
        <label>Originations Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payment_Advantage_Deck_Date__c</fullName>
        <label>Payment Advantage Deck Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuickStart_Complete_Date__c</fullName>
        <label>QuickStart Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuickStart_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuickStart Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuickStart_Welcome_Email_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this box if you&apos;d like a welcome email to the QuickStart to be sent to this contact immediately.</inlineHelpText>
        <label>QuickStart Welcome Email Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuickStart_Welcome_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box will be automatically checked after a QuickStart welcome email has been sent.</inlineHelpText>
        <label>QuickStart Welcome Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quickstart_Path__c</fullName>
        <formula>Account.Quickstart_Path__c</formula>
        <label>Quickstart Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_ID__c</fullName>
        <description>Custom field for Marketo integration</description>
        <label>SFDC Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_Status__c</fullName>
        <description>Custom field for Marketo Integration</description>
        <label>SFDC Campaign Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rep_Email__c</fullName>
        <label>Service Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Rep_Time_Trade_Link__c</fullName>
        <label>Service Rep Time Trade Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Services_Consultation_Complete_Date__c</fullName>
        <label>Services Consultation Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terms_of_Use_Version__c</fullName>
        <description>This is the Terms of Use version no. accepted by the Registrant.</description>
        <label>Terms of Use Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the contact that came for creation to get updated again thereby preventing the loop</description>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__zendesk_id__c</fullName>
        <label>Zendesk User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/Contact_Full_List?id=&quot; &amp; Id, IMAGE(&quot;https://www.marketo.com/salesforce/images/applicationLink.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>territory_manager_email__c</fullName>
        <label>territory manager email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>territory_manager_name__c</fullName>
        <label>territory manager name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_cmp_most_recent__c</fullName>
        <description>Most Recent Tracking Code value: CMP.  Copied from Lead record.</description>
        <label>trk-cmp-most-recent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_cmp_most_recent_dt__c</fullName>
        <description>Most Recent Tracking Code Date: CMP.  Copied from Lead record.</description>
        <label>trk-cmp-most-recent-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_cmp_orig__c</fullName>
        <description>Tracking Code value: CMP.  Copied from Lead record.</description>
        <label>trk-cmp-orig</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_cmp_orig_dt__c</fullName>
        <description>Original Tracking Code Date: CMP.  Copied from Lead record.</description>
        <label>trk-cmp-orig-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_kwd_most_recent__c</fullName>
        <description>Most Recent Tracking Code value: KWD.  Copied from Lead record.</description>
        <label>trk-kwd-most-recent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_kwd_most_recent_dt__c</fullName>
        <description>Most Recent Tracking Code Date: KWD.  Copied from Lead record.</description>
        <label>trk-kwd-most-recent-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_kwd_orig__c</fullName>
        <description>Tracking Code value: KWD.  Copied from Lead record.</description>
        <label>trk-kwd-orig</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_kwd_orig_dt__c</fullName>
        <description>Original Tracking Code Date: KWD.  Copied from Lead record.</description>
        <label>trk-kwd-orig-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_med_most_recent__c</fullName>
        <description>Most Recent Tracking Code value: MED.  Copied from Lead record.</description>
        <label>trk-med-most-recent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_med_most_recent_dt__c</fullName>
        <description>Most Recent Tracking Code Date: MED.  Copied from Lead record.</description>
        <label>trk-med-most-recent-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_med_orig__c</fullName>
        <description>Tracking Code value: MED.  Copied from Lead record.</description>
        <label>trk-med-orig</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_med_orig_dt__c</fullName>
        <description>Original Tracking Code Date: MED.  Copied from Lead record.</description>
        <label>trk-med-orig-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_src_most_recent__c</fullName>
        <description>Most Recent Tracking Code value: SRC.  Copied from Lead record.</description>
        <label>trk-src-most-recent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_src_most_recent_dt__c</fullName>
        <description>Most Recent Tracking Code Date: SRC.  Copied from Lead record.</description>
        <label>trk-src-most-recent-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_src_orig__c</fullName>
        <description>Tracking Code value: SRC.  Copied from Lead record.</description>
        <label>trk-src-orig</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_src_orig_dt__c</fullName>
        <description>Original Tracking Code Date: SRC.  Copied from Lead record.</description>
        <label>trk-src-orig-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_ver_most_recent__c</fullName>
        <description>Most Recent Tracking Code value: VER.  Copied from Lead record.</description>
        <label>trk-ver-most-recent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_ver_most_recent_dt__c</fullName>
        <description>Most Recent Tracking Code Date: VER.  Copied from Lead record.</description>
        <label>trk-ver-most-recent-dt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trk_ver_orig__c</fullName>
        <description>Tracking Code value: VER.  Copied from Lead record.</description>
        <label>trk-ver-orig</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trk_ver_orig_dt__c</fullName>
        <description>Original Tracking Code Date: VER.  Copied from Lead record.</description>
        <label>trk-ver-orig-dt</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Quickstart_request_validation</fullName>
        <active>false</active>
        <description>Validation verifies necessary fields for email are populated.</description>
        <errorConditionFormula>Garden_Address__c  = Null  ||  Quickstart_Path__c = Null</errorConditionFormula>
        <errorDisplayField>QuickStart_Welcome_Email_Requested__c</errorDisplayField>
        <errorMessage>Both Garden Address &amp; Quickstart Path fields must be populated in order for Quickstart email to be requested. Please verify those fields on the Account level.</errorMessage>
    </validationRules>
</CustomObject>